@@ -61,6 +61,14 @@ sourceSets {
   }
 }
 
+
+repositories {
+  mavenLocal()
+  mavenCentral()
+  jcenter()
+  maven { url 'https://jitpack.io' }
+}
+
 tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
@@ -212,11 +220,19 @@ def versions = [
   sonarPitest    : '0.5'
 ]
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 configurations {
   compileOnly {
     extendsFrom annotationProcessor
   }
 }
+
+apply from: "${rootDir}/cve-resolution-strategy.gradle"
 
 dependencies {
 
@@ -245,7 +261,7 @@ dependencies {
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.1'
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.3'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.5'
   implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '10.1.0'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.5.0.RELEASE'
@@ -261,7 +277,7 @@ dependencies {
   implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
   implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.2'
   implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
-  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.3.0'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.8.1'
   implementation group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
   implementation group: 'commons-validator', name: 'commons-validator', version: '1.6'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.4'
@@ -271,8 +287,8 @@ dependencies {
   implementation group: 'joda-time', name: 'joda-time', version: '2.10.10'
   implementation group: "com.vladmihalcea", name: "hibernate-types-55", version: "2.14.0"
 
-  implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.4.0'
-  implementation(group: 'org.postgresql', name: 'postgresql', version: '42.2.13') {
+  implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.8.0'
+  implementation(group: 'org.postgresql', name: 'postgresql', version: '42.3.4') {
     exclude(module: 'commons-logging')
     exclude(module: 'slf4j-simple')
   }
@@ -281,6 +297,7 @@ dependencies {
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
 
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
   testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0'
   testCompile group: 'org.testcontainers', name: 'postgresql', version: '1.15.1'
   testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.2.1.RELEASE'
